Add Parking UI + Listeners

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="parking_hours">
+        <item>1 or Less Hours</item>
+        <item>4 Hours</item>
+        <item>12 Hours</item>
+        <item>24 Hours</item>
+    </string-array>
 </resources>
