--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
         <item>12 Hours</item>
         <item>24 Hours</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 </resources>
